--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-switch": "^1.2.6",
+    "class-variance-authority": "^0.7.1",
     "googleapis": "^168.0.0",
     "lucide-react": "^0.561.0",
     "motion": "^12.23.26",
